name:          lvish-graph-algorithms
version:       0.1.0.0
synopsis:      Graph algorithms in lvish

-- description:         
-- license:             
-- license-file:        LICENSE
author:        Praveen Narayanan, Ryan Newton
maintainer:    pravnar@indiana.edu

-- copyright:           
category:      Concurrency
build-type:    Simple

-- extra-source-files:  
cabal-version: >=1.10

library
  exposed-modules:
    Data.Graph.Adjacency
    Data.LVar.Graph.BFS
    Data.LVar.Graph.MIS

  -- other-modules:       
  other-extensions:
    BangPatterns
    CPP
    NamedFieldPuns
    OverloadedStrings
    ScopedTypeVariables

  build-depends:
      base             >=4.6
    , bytestring       >=0.10
    , bytestring-mmap  >=0.2
    , containers       >=0.5
    , deepseq          >=1.3
    , directory        ==1.2.1.0
    , fgl              >=5.4
    , HUnit
    , lvish            >=1.0
    , par-collections  >=1.0
    , process          >=1.1.0.2
    , time             ==1.4.2
    , vector           >=0.10

  --                       pbbs-haskell,  monad-par-extras >=0.3
  hs-source-dirs:   src
  default-language: Haskell2010

executable lvish-graph-benchmarks
  main-is:          Main.hs
  hs-source-dirs:   src
  ghc-options:      -O2 -threaded -rtsopts
  build-depends:
      base             >=4.6
    , bytestring       >=0.10
    , bytestring-mmap  >=0.2
    , containers       >=0.5
    , deepseq          >=1.3
    , directory        >=1.2.1.0
    , fgl              >=5.4
    , HUnit
    , lvish            >=1.0
    , par-collections  >=1.0
    , process          >=1.1.0.2
    , rdtsc
    , split
    , time             >=1.4.2
    , vector           >=0.10

  --                       pbbs-haskell, monad-par-extras >=0.3
  default-language: Haskell2010
