name:               par-classes
version:            1.2
synopsis:
  Type classes providing a general interface to various @Par@ monads.

-- Version history:
--  1.0      : Replacing old 'abstract-par' package with this new, extended version.
--  1.0.1    : Add Data.Splittable
--  1.1      : Add EffectSigs
--  1.2      : Add Control.Par.Sparks

description:
  A @Par@ monad offers a parallel programming API based on
  dataflow programming.  This package offers classes abstracting over
  Par monads.  These classes separate different levels of @Par@
  functionality.  See the "Control.Par.Class" module for more details.
  .
  For instances of these parallelism classes, see the @lVish@ and
  @monad-par@ packages, as well as the limited reference
  implementation, found in `Control.Par.Sparks`.

homepage:           https://github.com/iu-parfunc/lvars
license:            BSD3
license-file:       LICENSE
author:             Ryan Newton
maintainer:         Ryan Newton <rrnewton@gmail.com>
copyright:          (c) Ryan Newton 2011-2012
stability:          Experimental
category:           Control,Parallelism,Monads
build-type:         Simple
cabal-version:      >=1.8
extra-source-files:

source-repository head
  type:     git
  location: https://github.com/iu-parfunc/lvars
  subdir:   haskell/par-classes

library
  exposed-modules:
    Control.Par.Class
    Control.Par.Class.Unsafe
    Control.Par.EffectSigs
    Data.Splittable.Class

  -- Classes generalizing different levels of monad-par functionality:
  -- Control.Par.Sparks                  
  -- This needs to stay low-dependencies!!  Interfaces only.
  build-depends:
      base          >=4.7 && <5
    , deepseq       >=1.1
    , ghc-prim      >=0.3
    , parallel
    , transformers

  ghc-options:     -Wall -fno-warn-orphans
