name:          par-collections
version:       1.2
synopsis:      Generic parallel combinators for data and iteration spaces.

-- Version history:
--  1.0      : This library introduced to replace the deprecated monad-par-extras.
--  1.1      : Add LVish-2.0 style effect signatures
--  1.1.1    : Add Split instance for list
--  1.2      : Remove Eq superclass of Split.  Seems unjustified.

description:
  These modules provide means to traverse and consume
  common data structures, in parallel, using any Par monad.
  .
  Additionally, a variety of parallel looping constructs are
  provided by this package (e.g. parallel traversals where
  the "data structure" is merely a range / iteration space.)

license:       BSD3
license-file:  LICENSE
author:        Ryan Newton
maintainer:    Ryan Newton <rrnewton@gmail.com>
copyright:     (c) Ryan Newton 2011-2013
stability:     Experimental
category:      Control,Parallelism,Monads
build-type:    Simple
cabal-version: >=1.8

source-repository head
  type:     git
  location: https://github.com/iu-parfunc/lvars
  subdir:   haskell/par-collections

library
  exposed-modules:
    Data.Par
    Data.Par.Map
    Data.Par.Range
    Data.Par.Set
    Data.Par.Splittable
    Data.Par.Traversable

  build-depends:
      base          >=4    && <5
    , cereal        >=0.3
    , deepseq       >=1.3
    , mtl           >=2.0
    , par-classes   >=1.1
    , primitive     >=0.6
    , random        >=1.0
    , transformers  >=0.2
    , vector        >=0.10

  -- This provides the interface which monad-par implements:
  -- These are so we can provide instances for existing collections:
  if impl(ghc <7.7)
    build-depends: containers >=0.5

  else
    cpp-options:   -DNEWCONTAINERS
    build-depends: containers >=0.5.4.0

  ghc-options:     -O2 -rtsopts -Wall
  other-modules:
