name:          test-par-collections
version:       1.1
synopsis:
  Factored out test-suite from par-collections to break a cycle.

cabal-version: >=1.8
build-type:    Simple

-- Factoring this out breaks the cycle between the 'par-collections' and 'lvish' packages.

executable test-par-collections-dummy-executable
  main-is:       Dummy.hs
  build-depends: base

test-suite test-par-collections
  type:           exitcode-stdio-1.0
  hs-source-dirs: ./
  main-is:        Main.hs

  -- Build depends that are used directly by the test files, including:
  -- (1) Self dependency:
  build-depends:  par-collections

  -- (2) Dependencies common to test files and the library:
  build-depends:
      atomic-primops  >=0.6
    , base            >=4   && <5
    , par-classes     >=1.1
    , time            >=1.4

  -- (3) Additional depends to test concrete instances:
  build-depends:  lvish >=2.0

  -- (4) Additional build depends for testing:
  build-depends:
      HUnit
    , QuickCheck
    , tasty             >=0.10
    , tasty-hunit
    , tasty-quickcheck
    , tasty-th
    , text
    , time

  ghc-options:    -O2 -threaded -rtsopts -Wall
